--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 }
 .row {
   display: flex;
-  /* border-bottom: 1px solid #000; */
+  border-bottom: 1px solid #000;
 }
 .row:last-child {
   border-bottom: none;
@@ -80,7 +80,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  }
+  border-right: 2px solid #000;
+}
 .row .cell:last-child {
   border-right: none;
 }
