--- a/style.css
+++ b/style.css
@@ -27,11 +27,6 @@ body {
     border: none;
   }
 }
-#A4 .container {
-  width: 866px;
-  height: 281mm;
-  background-color: #fff;
-}
 .title {
   text-align: center;
   font-size: 26px;
@@ -59,6 +54,8 @@ table {
 }
 table tr td {
   text-align: center;
+  padding: 0;
+  margin: 0;
 }
 table tr td:first-child {
   width: 108px;
